--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_below="@+id/textView"
         android:layout_alignStart="@+id/textView"
         android:layout_marginTop="18dp"
-        android:id="@+id/editText"
+        android:id="@+id/cityName"
         android:layout_alignEnd="@+id/textView"
         android:textSize="24sp"
         android:textColor="@android:color/background_light"
@@ -64,10 +64,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/cityName"
         android:id="@+id/textView2"
         android:textSize="30sp"
         android:textColor="@android:color/background_light"
-        android:layout_alignStart="@+id/editText" />
+        android:layout_alignStart="@+id/cityName" />
 
 </RelativeLayout>
