Getting the weather

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,53 +21,55 @@
         android:scaleType="centerCrop"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cityName"
+        android:id="@+id/resultTextView"
+        android:textSize="30sp"
+        android:textColor="@android:color/background_light"
+        android:layout_alignStart="@+id/cityName" />
+
     <TextView
         android:text="Enter A City...."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:id="@+id/textView"
         android:textSize="36sp"
         android:textColor="@android:color/white"
-        android:fontFamily="@android:string/unknownName" />
+        android:fontFamily="@android:string/unknownName"
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/button"
+        android:layout_marginEnd="12dp"
+        android:layout_marginTop="92dp" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:layout_below="@+id/textView"
-        android:layout_alignStart="@+id/textView"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="35dp"
         android:id="@+id/cityName"
-        android:layout_alignEnd="@+id/textView"
         android:textSize="24sp"
         android:textColor="@android:color/background_light"
         android:textColorHint="@android:color/white"
-        android:hint="City Name...." />
+        android:hint="City Name...."
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:text="What's The Weather??"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
         android:id="@+id/button"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:textSize="14sp"
         android:background="@android:color/background_light"
         android:padding="10dp"
         android:elevation="24dp"
-        android:onClick="findWeather" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cityName"
-        android:id="@+id/textView2"
-        android:textSize="30sp"
-        android:textColor="@android:color/background_light"
-        android:layout_alignStart="@+id/cityName" />
+        android:onClick="findWeather"
+        android:layout_below="@+id/resultTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="79dp" />
 
 </RelativeLayout>
